--- a/ref.bib
+++ b/ref.bib
@@ -1487,6 +1487,13 @@ author = {{Chelsio Communications}},
   year={2011},
 }
 
+@inproceedings{sharedbottlenecks,
+  title = {{A Passive Approach for Detecting Shared Bottlenecks}},
+  author = {Katabi, Dina and Bazzi, Issam and Yang, Xiaowei},
+  booktitle = {IEEE ICCCN},
+  year = {2001},
+}
+
 @inproceedings{path-properties,
    author =       "Allman, Mark and Paxson, Vern",
    title =        "{On Estimating End-to-End Network Path Properties}",
