--- a/packages.tex
+++ b/packages.tex
@@ -124,6 +124,22 @@
 \newcommand{\eg}{e.g., }
 \newcommand{\etc}{{etc.}\xspace}
 \newcommand{\ie}{i.e., }
+
+\usepackage{expl3}
+\usepackage{environ}
+\ExplSyntaxOn
+\seq_new:N \g_appendices_seq% define a sequence for holding the appendices
+\NewEnviron{Appendix}{\seq_gput_right:No \g_appendices_seq \BODY}
+\newcommand\AddAppendices{% regurgitate the appendices
+  \appendix% turn all subsequent sections into appendices
+  \seq_map_inline:Nn \g_appendices_seq {##1}
+}
+\ExplSyntaxOff
+
+% automatically print the appendices at the end of the document
+\usepackage{etoolbox}
+\AtEndDocument{\AddAppendices}
+
 %
 \newcommand{\an}[1]{{\color{teal}\bf AN: {#1}}}
 \newcommand{\hb}[1]{{\color{brown}\bf HB: {#1}}}
